7132637: (dc) DatagramChannel multicast tests failing on MacOSX Reviewed-by: alanb